# lude.rs

./: Cargo.toml
ecs/: Cargo.toml
ecs/src/: lib.rs
simul/: Cargo.toml
simul/src/: lib.rs
src/: component.rs  lib.rs
