[package]
name = "lude-ecs"
version = "0.1.0"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Entity-Component-System"
license = "MIT OR Apache-2.0"

[dependencies]
containers = { version = "0.8", default-features = false, git = "https://github.com/strake/containers.rs", rev = "9d47f07735417d5eec5b053b93af486213efce78" }
hash-table = "0.2"
loca = "0.6"
ptr = "0.1.4"
siphasher = "0.2"
slot = "0.2"

[dev-dependencies]
default_allocator = "0.2"
