[package]
name = "lude-ecs"
version = "0.1.0"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Entity-Component-System"
license = "MIT OR Apache-2.0"

[dependencies]
containers = { version = "0.9", default-features = false, git = "https://github.com/strake/containers.rs", rev = "518b79c306f9c1eb108010be195bdb1281d89bbf" }
hash-table = "0.2"
loca = "0.7"
ptr = "0.2"
siphasher = "0.2"
slot = "0.2"

[dev-dependencies]
default_allocator = "0.2"
